tests/build/cases/widget_new/missing_value2.stderr
error[E0061]: this function takes 1 argument but 0 arguments were supplied
 --> cases/widget_new/missing_value2.rs:6:9
  |
6 |         margin =
  |         ^^^^^^ an argument is missing
  |
note: associated function defined here
 --> $WORKSPACE/zero-ui/src/properties/layout.rs
  |
  | #[property(LAYOUT, default(0))]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: this error originates in the attribute macro `property` (in Nightly builds, run with -Z macro-backtrace for more info)
help: provide the argument
   |
6  |         margin(/* value */) =
   |               +++++++++++++
